# drone-room-mapper

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_agentic.py  run_agentic_real.py  run_real_mapping.py  run_sim.py  run_sim_agentic.py  run_sim_detection.py  run_sim_dimsim_agentic.py  run_sim_dimsim_agentic_vo.py  run_sim_dimsim_detection.py  run_sim_dimsim_vo.py  run_sim_dimsim_vo_nav.py  run_sim_dimsim_vo_only.py
blueprints/: __init__.py  agentic_explorer_blueprint.py  drone_agentic_real_blueprint.py  real_mapping_blueprint.py  sim_agentic_blueprint.py  sim_blueprint.py  sim_detection_blueprint.py  sim_detection_dimsim_blueprint.py  sim_dimsim_agentic_blueprint.py  sim_dimsim_agentic_vo_blueprint.py  sim_dimsim_vo_blueprint.py  sim_dimsim_vo_nav_blueprint.py  sim_dimsim_vo_only_blueprint.py
drone/: agentic_frontier_selector.py  dimsim_depth_lidar_module.py  dimsim_visual_odometry_module.py  mapping_module.py
lcm_probe/: probe.py  publish_cmd_vel.py  start_exploration.py
rooms/: __init__.py  generator.py  models.py
sim_camera/: dimsim_camera_module.py  pybullet_camera.py  pybullet_room.py  sim_camera_module.py  test_standalone.py
simulation/: __init__.py  sim_drone_connection_module.py
tests/: test_depth_lidar_projection.py  test_depth_model_standalone.py  test_depth_module_mock_e2e.py  test_depth_projection.py  test_depth_timing_resized.py  test_gemini_key.py  test_rooms.py  test_vo_odom_bootstrap.py  test_vo_sparse_tracking.py
