[project]
name = "drone-room-mapper"
version = "0.1.0"
description = "Simulation tool for drone with DimOS mapping a room"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Pointed at a fork, branch drone-room-mapper/silent-stop-v5 -- carries
    # MovementManager.silent_stop (needed by AgenticFrontierSelector's
    # safety monitor, see that file's docstring) on top of upstream dimos.
    "dimos[base,drone] @ git+https://github.com/knikou01/dimos.git@drone-room-mapper/silent-stop-v5",
    # agentic explorer
    "Pillow",           # costmap image rendering in AgenticFrontierSelector
    "google-genai",     # Gemini API (free tier) for LLM frontier selection
    "python-dotenv",    # loads GEMINI_API_KEY (and others) from .env
    # simulated camera (SimCameraModule)
    "pybullet",         # PyBullet room rendering and depth capture
    # real drone depth mapping (DroneDepthModule)
    "transformers",     # Depth Anything V2 inference pipeline
    # torch auto-selects CUDA if a compatible GPU/driver is present at
    # runtime, CPU otherwise -- no separate CPU/GPU package variant needed.
    # Used by transformers' depth models and by kornia (DISK+LightGlue,
    # DimSimVisualOdometryModule's tracking_method="learned").
    "torch",
    "kornia",  # DISK + LightGlue (drone/dimsim_visual_odometry_module.py's tracking_method="learned")
    # A pre-existing gap between what dimos[base,drone] declares and what
    # it actually needs at import time: python-socketio is needed by
    # dimos.web.websocket_vis.websocket_vis_module, imported by
    # dimos.visualization.vis_module, which EVERY blueprint in this repo
    # uses. langchain-groq (+ groq, its own dependency) is what
    # McpClient's model="groq:..." provider prefix actually resolves
    # through (langchain.agents.create_agent's universal
    # init_chat_model-style provider dispatch, dimos/agents/mcp/mcp_client.py)
    # -- needed for the console's Groq option, not just
    # AgenticFrontierSelector's own Groq client (which uses the openai
    # package directly, unaffected). pytest is needed for tests/.
    "pytest",
    "groq",
    "langchain-groq",
    "opencv-contrib-python",  # cv2, used directly in sim_camera/tests
    "langchain-google-genai", # used directly in blueprints/sim_agentic_blueprint.py
    "python-socketio",  # dimos.web.websocket_vis.websocket_vis_module (vis_module, used by every blueprint)
    # Only surfaces at WebInput.start() (a FastAPI route decorator needs it
    # to register a form-data endpoint), not at import time.
    "python-multipart",  # dimos.web.dimos_interface.api.server's /submit_query route (via WebInput)
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rooms", "simulation", "blueprints", "drone", "sim_camera"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
